--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -15,4 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        run: echo "Run build step"
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Run the code
+        run: python3 app.py
